NOJIRA: Resolves odd prod-only layout issue with switch dot.

--- a/client/src/styles/elements/_form-switch.scss
+++ b/client/src/styles/elements/_form-switch.scss
@@ -77,7 +77,7 @@
   background-color: $color-white;
   border-radius: 100%;
   content: '';
-  display: inline-block;
+  display: block;
   height: 26px;
   transition: all $animation-duration;
   width: 26px;
